plugins {
    id 'java'
    id 'checkstyle'
//    id 'pmd'
}

group = 'com.nelkinda.tools'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '13'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'junit:junit:4.13'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.6.0'
    testImplementation 'org.junit.platform:junit-platform-commons:1.6.0'
    testImplementation 'org.junit.platform:junit-platform-engine:1.6.0'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.6.0'
}

checkstyleMain {
    configFile = file("config/checkstyle/checkstyleMain.xml")
    maxWarnings = 0
}

checkstyleTest {
    configFile = file("config/checkstyle/checkstyleTest.xml")
    maxWarnings = 0
}

//pmd {
//    ruleSets = []
//    consoleOutput = true
//    dependencies {
//        pmd 'net.sourceforge.pmd:pmd:6.21.0'
//        pmd 'net.sourceforge.pmd:pmd-core:6.21.0'
//        pmd 'net.sourceforge.pmd:pmd-java:6.21.0'
//    }
//}
//
//pmdMain {
//    ruleSetFiles = files("config/pmd/pmdMain.xml")
//}
//
//pmdTest {
//    ruleSetFiles = files("config/pmd/pmdTest.xml")
//}

test {
    useJUnitPlatform()
}

wrapper {
    gradleVersion "6.2.2"
    jarFile ".gradle/wrapper/gradle-wrapper.jar"
    distributionType = Wrapper.DistributionType.ALL
}
